Fix overlapping text on the Sad Tab.

Resizing the window makes this go away, so it's just an issue with
initial layout.

Bug: 735089
Change-Id: I84b4fba971dd26f79389f90804fd21b92f8031ca
Reviewed-on: https://chromium-review.googlesource.com/541058
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Sidney San Martin <sdy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#480890}