chrome/browser/ui/cocoa/tab_contents/sad_tab_view_cocoa.mm
@@ -138,6 +138,7 @@ const CGFloat kMaxTopMargin = 130;
                                                messageColor,
                                          }] autorelease]];
     }
+    [message_ sizeToFit];
     [container_ addSubview:message_];
 
     NSString* helpLinkTitle =
